cmake_minimum_required(VERSION 3.17)
project(codechef)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fstack-protector")

add_executable(AVERAGE AVERAGE.cpp)
add_executable(BOLT BOLT.cpp)
add_executable(BOOKLIST BOOKLIST.cpp)
add_executable(BUTYPAIR BUTYPAIR.cpp)
add_executable(CHARGES CHARGES.cpp)
add_executable(CHEFELEC CHEFELEC.cpp)
add_executable(CHEFRRUN CHEFRRUN.cpp)
add_executable(CHESUB CHESUB.cpp)
add_executable(DIVSEQ DIVSEQ.cpp)
add_executable(ENDCORR ENDCORR.cpp)
add_executable(HOOPS HOOPS.cpp)
add_executable(IARANK IARANK.cpp)
add_executable(IAREVERS IAREVERS.cpp)
add_executable(ICL16A ICL16A.cpp)
add_executable(INOI1201 INOI1201.cpp)
add_executable(INOI1402 INOI1402.cpp)
add_executable(LEADGAME LEADGAME.cpp)
add_executable(LONGPALI LONGPALI.cpp)
add_executable(MAXFUN MAXFUN.cpp)
add_executable(MSTICK MSTICK.cpp)
add_executable(NUMCOMP1 NUMCOMP1.cpp)
add_executable(NEXTPERM NEXTPERM.cpp)
add_executable(SEAD SEAD.cpp)
add_executable(SOCKS1 SOCKS1.cpp)
add_executable(SORTROWS SORTROWS.cpp)
add_executable(SSCRIPT SSCRIPT.cpp)
add_executable(TANDJ1 TANDJ1.cpp)
add_executable(TILES01 TILES01.cpp)
add_executable(TWINGFT TWINGFT.cpp)
add_executable(VOTERSDI VOTERSDI.cpp)
add_executable(ZCO13002 ZCO13002.cpp)
add_executable(ZCO14001 ZCO14001.cpp)
add_executable(ZCO14003 ZCO14003.cpp)
add_executable(ZCO15001 ZCO15001.cpp)
add_executable(ZCO15002 ZCO15002.cpp)
add_executable(ZCO15003 ZCO15003.cpp)
add_executable(ZCO16001 ZCO16001.cpp)
add_executable(ZCO16002 ZCO16002.cpp)
add_executable(ZCO20001 ZCO20001.cpp)